controller添加日志注解及日志打印

--- a/cooperation-manage/pom.xml
+++ b/cooperation-manage/pom.xml
@@ -9,9 +9,16 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>financial-manage</artifactId>
+    <artifactId>cooperation-manage</artifactId>
 
     <dependencies>
+        <!--热部署-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
         <!--引入本项目的其他子模块，制定version为同项目的版本，引入前必须package-->
         <dependency>
             <groupId>com.woniuxy</groupId>
