--- a/cooperation-manage/src/main/resources/application.yml
+++ b/cooperation-manage/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: ${port:5051}
 logging:
   level:
-    com.woniuxy.cooperationmanage: debug
+    com.woniuxy.cooperationmanage: debug # error,warn,info,debug,trace
 spring:
   application:
     name: cooperation-manage
