--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -12,6 +12,13 @@
     <artifactId>gateway</artifactId>
 
     <dependencies>
+        <!--热部署-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
         <dependency>
             <groupId>com.woniuxy</groupId>
             <artifactId>common-entity</artifactId>
