--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>common-entity</module>
         <module>gateway</module>
+        <module>cooperation-manage</module>
         <module>sales-manage</module>
         <module>storehouse-manage</module>
         <module>purchase-manage</module>
@@ -29,13 +30,12 @@
         <spring.boot.version>2.3.12.RELEASE</spring.boot.version>
         <spring.cloud.version>Hoxton.SR12</spring.cloud.version>
         <spring.cloud.alibaba.version>2.2.7.RELEASE</spring.cloud.alibaba.version>
-        <!--		<seata.version>1.3.0</seata.version>-->
         <seata.version>0.9.0</seata.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
-            <!--阿里微服务-->
+
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
@@ -76,7 +76,6 @@
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-seata</artifactId>
-                <!--			<version>2.1.3.RELEASE</version>-->
                 <version>2.1.0.RELEASE</version>
                 <exclusions>
                     <exclusion>
@@ -85,7 +84,6 @@
                     </exclusion>
                 </exclusions>
             </dependency>
-            <!--防止冲突，也可以不用exclusion，有优先级-->
             <dependency>
                 <groupId>io.seata</groupId>
                 <artifactId>seata-all</artifactId>
@@ -94,4 +92,16 @@
         </dependencies>
     </dependencyManagement>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <fork>true</fork>
+                    <addResources>true</addResources>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
