--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -1,24 +1,34 @@
 server:
-  port: 7071
-
+  port: ${port:7071}
 spring:
   application:
     name: gateway
   cloud:
     nacos:
       server-addr: localhost:8848
-      discovery:
-        cluster-name: ${clustername:cd}    #分组
     gateway:
+      globalcors: #跨域
+        add-to-simple-url-handler-mapping: true   #针对OPTION跨域运行
+        cors-configurations:
+          '[/**]':
+            allowedOrigins: "*"
+            allowedMethods:
+              - GET
+              - POST
+              - DELETE
+              - PUT
+              - OPTIONS
+            allowedHeaders: "*"               #允许请求头
       routes: #路由配置
-#        - id: alibaba-provider-student                #路由id,自定义路由名
-#          #          uri: http://localhost:8081          #映射路径
-#          uri: lb://alibaba-provider-student          #支持使用服务名调用，支持负载均衡
-#          predicates: #断言，条件判断
-#            - Path=/student/**                #路径断言，请求路径
+        - id: sales-manage
+          uri: lb://sales-manage
+          predicates:
+            - Path=/client/**,/clientAddress/**,/saleCart/**,/saleCartItem/**,/saleOrder/**,/saleRecord/**
         - id: cooperation-manage
-          #          uri: http://localhost:7071
           uri: lb://cooperation-manage
           predicates:
-            - Path=/goods/**
-            - path=/brand/**
+            - Path=/components/**,/model/**,/supplier/**
+        - id: storehouse-manage
+          uri: lb://storehouse-manage
+          predicates:
+            - Path=/store/**,/storeRecord/**
