--- a/storehouse-manage/src/main/resources/application.yml
+++ b/storehouse-manage/src/main/resources/application.yml
@@ -14,6 +14,9 @@ spring:
   cloud:
     nacos:
       server-addr: localhost:8848
+    alibaba:
+      seata:
+        tx-service-group: fsp_tx_group
 
 mybatis:
   type-aliases-package: com.woniuxy.commonentity.entity
