--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-<groupId>com.woniuxy</groupId>
+    <groupId>com.woniuxy</groupId>
     <artifactId>noby-computermall</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
@@ -30,7 +30,8 @@
         <spring.boot.version>2.3.12.RELEASE</spring.boot.version>
         <spring.cloud.version>Hoxton.SR12</spring.cloud.version>
         <spring.cloud.alibaba.version>2.2.7.RELEASE</spring.cloud.alibaba.version>
-        <seata.version>0.9.0</seata.version>
+        <!--        <seata.version>0.9.0</seata.version>-->
+        <seata.version>1.4.2</seata.version>
     </properties>
 
     <dependencyManagement>
@@ -73,22 +74,22 @@
                 <version>${mybatis.spring.boot.verison}</version>
             </dependency>
             <!--seata-->
-            <dependency>
-                <groupId>com.alibaba.cloud</groupId>
-                <artifactId>spring-cloud-alibaba-seata</artifactId>
-                <version>2.1.0.RELEASE</version>
-                <exclusions>
-                    <exclusion>
-                        <artifactId>seata-all</artifactId>
-                        <groupId>io.seata</groupId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-            <dependency>
-                <groupId>io.seata</groupId>
-                <artifactId>seata-all</artifactId>
-                <version>${seata.version}</version>
-            </dependency>
+            <!--            <dependency>-->
+            <!--                <groupId>com.alibaba.cloud</groupId>-->
+            <!--                <artifactId>spring-cloud-alibaba-seata</artifactId>-->
+            <!--                <version>2.1.0.RELEASE</version>-->
+            <!--                <exclusions>-->
+            <!--                    <exclusion>-->
+            <!--                        <artifactId>seata-all</artifactId>-->
+            <!--                        <groupId>io.seata</groupId>-->
+            <!--                    </exclusion>-->
+            <!--                </exclusions>-->
+            <!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>io.seata</groupId>-->
+            <!--                <artifactId>seata-all</artifactId>-->
+            <!--                <version>${seata.version}</version>-->
+            <!--            </dependency>-->
         </dependencies>
     </dependencyManagement>
 
